[package]
name = "sc-easy-builder"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = ""
documentation = "https://docs.rs/sc-easy-builder"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-service = { version = "0.10.0-dev", path = "../service" }
sc-telemetry = { version = "4.0.0-dev", path = "../telemetry" }
sc-consensus = { version = "0.10.0-dev", path = "../consensus/common" }
sc-executor = { version = "0.10.0-dev", path = "../executor", features = ["wasmtime"] }
sp-runtime = { version = "4.0.0-dev", path = "../../primitives/runtime" }
sp-transaction-pool = { version = "4.0.0-dev", path = "../../primitives/transaction-pool" }
sp-consensus-babe = { version = "0.10.0-dev", path = "../../primitives/consensus/babe" }
sc-consensus-babe = { version = "0.10.0-dev", path = "../consensus/babe" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../transaction-pool" }
grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", path = "../finality-grandpa" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-timestamp = { version = "4.0.0-dev", path = "../../primitives/timestamp" }
sp-authorship = { version = "4.0.0-dev", path = "../../primitives/authorship" }
